// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultichainBridgeQuoteCard should not render when there is a quote fetch error 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should not render when there is no quote 1`] = `<div />`;

exports[`MultichainBridgeQuoteCard should render a quote with MM fee 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          >
            Quote
          </p>
          <div
            class="mm-box"
          >
            <div
              class="mm-box mm-box--display-flex"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1 USDC = 0.999 USDC
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Bridging
        </p>
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          >
            <img
              alt="OP Mainnet logo"
              class="mm-avatar-network__network-image"
              src="./images/optimism.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            OP Mainnet
          </p>
          <span
            class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-2-right.svg');"
          />
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          >
            <img
              alt="Polygon logo"
              class="mm-avatar-network__network-image"
              src="./images/pol-token.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            Polygon
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          data-testid="network-fees"
        >
          $2.52
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          >
            Slippage
          </p>
          <button
            aria-label="Edit slippage"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="slippage-edit-button"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
          </button>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          undefined%
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Time
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1 min
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--color-text-alternative"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        />
        <button
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
        >
          More quotes
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote (no MM fee) 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          >
            Quote
          </p>
          <div
            class="mm-box"
          >
            <div
              class="mm-box mm-box--display-flex"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1 USDC = 0.999 USDC
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Bridging
        </p>
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          >
            <img
              alt="OP Mainnet logo"
              class="mm-avatar-network__network-image"
              src="./images/optimism.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            OP Mainnet
          </p>
          <span
            class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-2-right.svg');"
          />
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          >
            <img
              alt="Polygon logo"
              class="mm-avatar-network__network-image"
              src="./images/pol-token.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            Polygon
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          data-testid="network-fees"
        >
          $2.52
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          >
            Slippage
          </p>
          <button
            aria-label="Edit slippage"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="slippage-edit-button"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
          </button>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          undefined%
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Time
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1 min
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--color-text-alternative"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        />
        <button
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
        >
          More quotes
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultichainBridgeQuoteCard should render the recommended quote while loading new quotes 1`] = `
<div>
  <div
    class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-3 mm-box--flex-direction-column mm-box--width-full"
  >
    <div
      class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-2 mm-box--flex-direction-column mm-box--width-full"
    >
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          >
            Quote
          </p>
          <div
            class="mm-box"
          >
            <div
              class="mm-box mm-box--display-flex"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-icon-alternative-soft"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1 ETH = 2,444 USDC
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Bridging
        </p>
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          >
            <img
              alt="OP Mainnet logo"
              class="mm-avatar-network__network-image"
              src="./images/optimism.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            OP Mainnet
          </p>
          <span
            class="mm-box mm-icon mm-icon--size-xs mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/arrow-2-right.svg');"
          />
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-transparent mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          >
            <img
              alt="Polygon logo"
              class="mm-avatar-network__network-image"
              src="./images/pol-token.svg"
            />
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          >
            Polygon
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Network fee
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          data-testid="network-fees"
        >
          $2.52
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <div
          class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--gap-1 mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
          >
            Slippage
          </p>
          <button
            aria-label="Edit slippage"
            class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-alternative mm-box--background-color-transparent mm-box--rounded-lg"
            data-testid="slippage-edit-button"
          >
            <span
              class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/edit.svg');"
            />
          </button>
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          undefined%
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-alternative"
        >
          Time
        </p>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          1 min
        </p>
      </div>
      <div
        class="mm-box mm-container mm-container--max-width-undefined mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-nowrap mm-box--justify-content-space-between mm-box--align-items-center mm-box--color-text-alternative"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
        >
          Rate includes 0.875% fee
        </p>
        <button
          class="mm-box mm-text mm-button-base mm-button-link mm-button-link--size-auto mm-text--body-md mm-box--padding-0 mm-box--padding-right-0 mm-box--padding-left-0 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent"
        >
          More quotes
        </button>
      </div>
    </div>
  </div>
</div>
`;
